+ Intermediate commit. No projects fleshed out, half working

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: devlopr
-subtitle: A Portfolio Jekyll Theme Built for Developers
+title: Ryan Harland
+subtitle: Problem-solving and making games are my jam!
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
@@ -12,12 +12,10 @@ urls:
       url: /
     - text: About
       url: /about
-    - text: Blog
-      url: /blog
+    - text: Projects
+      url: /projects
     - text: Gallery
       url: /gallery
-    - text: Shop
-      url : /shop
     - text: Contact
       url : /contact
 
@@ -25,36 +23,44 @@ urls:
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
+author: Ryan Harland
+author_bio: I'm an aspiring indie game developer and programmer with a love for many disciplines!
+author_email: "rharland726@gmail.com"
+author_location: England
+author_website_url: "ryan-harland.github.io"
+typewrite-text: I'm an aspiring indie game developer and programmer with a love for many disciplines!
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
+
+# Latest project information
 
 # Experiences
 author_work_experiences:
-            - company_name: Google
-              company_logo: google.png
-              company_url: https://google.com
-              designation: Software Engineer
-              description: Worked on various Google Products
+            - company_name: Sumo Digital
+              company_logo: sumo.png
+              company_url: https://www.sumo-digital.com/
+              designation: Placement Programmer
+              description: I was responsible for maintaining a number of Unreal Engine plugins. Secondary to this was significant work with WPF as well as overhauling various command line utilities
               visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
-              company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
+            - company_name: Derbyshire County Council
+              company_logo: dcc.png
+              company_url: https://www.derbyshire.gov.uk/home.aspx
+              designation: Freelance Contract
+              description: As part of my work experience during college, I was contracted to create an educational video for children about the Derwent Valley Mills using Unreal Engine 4
               visibility: true
 
 # Education
 author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
+              - college_logo: shu.png
+                college_name: Sheffield Hallam University
+                college_url: https://www.shu.ac.uk/
+                college_degree: BSc Computer Science for Games - First
+                description: During this course I undertook many projects, such as creating games using SFML, DirectX 11, as well as creating a custom engine for the PlayStation 5, of which our game won "Best Level 6 Group Project" at GameOver 25
+                visibility: true
+              - college_logo: cc.png
+                college_name: Chesterfield College
+                college_url: https://www.chesterfield.ac.uk/
+                college_degree: Level 3 Extended Diploma in Game Design - D*D*D
+                description: During my studies here I undertook many aspects of industry, such as business, 3D modelling, 2D art, Unreal Engine and C++, culminating in creating a tutorial level for a survival RPG
                 visibility: true
 
 # Projects
@@ -64,18 +70,20 @@ author_project_details:
                 project_description: A Platform built for Gamers and Game Devs
                 project_url: https://gamershub.in
                 visibility: true
+                featured: false
               - project_thumbnail: hack4r.PNG
                 project_title: Hack4r
                 project_description: A Platform built for Hackers and Penetration Testers
                 project_url: https://hack4r.com
                 visibility: true
+                featured: true
 
 # social links
-twitter_username: xplor4r
-github_username:  sujaykundu777
-instagram_username: xplor4r
+# twitter_username: xplor4r
+github_username:  ryan-harland
+# instagram_username: xplor4r
 # facebook_username: johndoe
-# linkedin_username: johndoe
+linkedin_username: ryanharland
 # behance_username: johndoe
 # medium_username: johndoe
 # telegram_username: johndoe
@@ -88,18 +96,18 @@ instagram_username: xplor4r
 # hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+# wakatime_username: sujaykundu777
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+# mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # contact form - (choose formspress or getform)
 # getform_endpoint: 83b703c3-9e47-4df4-ac55-e24d7eb02abc
-formspree_email: johndoe@gmail.com
+# formspree_email: johndoe@gmail.com
 
 # releases - widget can be (sidebar, modal or embed)
-olvy_organization: devlopr
-olvy_widget_type: sidebar
+# olvy_organization: devlopr
+# olvy_widget_type: sidebar
 
 # syntax highlighter
 markdown: kramdown
@@ -114,7 +122,7 @@ show_author_project_details: true
 # pagination of posts
 paginate: 4
 per_page: 4
-paginate_path: "/blog/page/:num/"
+paginate_path: "/projects/page/:num/"
 
 # minify
 # compress_html:
@@ -232,6 +240,7 @@ exclude:
   - assets/bower_components/lightgallery/test/lightgallery.html
   - assets/bower_components/masonry-layout/README.md
   - assets/bower_components/imagesloaded/README.md
+  - projects.md
 
 
 destination: ./build
