--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,6 @@ urls:
       url: /projects
     - text: Gallery
       url: /gallery
-    - text: Contact
-      url : /contact
 
 
 # Edit Author details (For multi authors check _data/authors.yml)
@@ -29,7 +27,7 @@ author_email: "rharland726@gmail.com"
 author_location: England
 author_website_url: "ryan-harland.github.io"
 typewrite-text: I'm an aspiring indie game developer and programmer with a love for many disciplines!
-hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
+hero_cover_img: background.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Latest project information
 
@@ -53,7 +51,7 @@ author_education_details:
               - college_logo: shu.png
                 college_name: Sheffield Hallam University
                 college_url: https://www.shu.ac.uk/
-                college_degree: BSc Computer Science for Games - First
+                college_degree: BSc Computer Science for Games - First Class w/ Honours, Award Classification - 84.6
                 description: During this course I undertook many projects, such as creating games using SFML, DirectX 11, as well as creating a custom engine for the PlayStation 5, of which our game won "Best Level 6 Group Project" at GameOver 25
                 visibility: true
               - college_logo: cc.png
@@ -89,25 +87,6 @@ linkedin_username: ryanharland
 # telegram_username: johndoe
 # dribbble_username: johndoe
 # flickr_username: johndoe
-
-#for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
-
-# disqus_shortname: sujay-kundu
-# hyvor_talk_website_id: 476
-
-# wakatime username (coding activity)
-# wakatime_username: sujaykundu777
-
-# mailchimp embedded form url (newsletter):
-# mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
-
-# contact form - (choose formspress or getform)
-# getform_endpoint: 83b703c3-9e47-4df4-ac55-e24d7eb02abc
-# formspree_email: johndoe@gmail.com
-
-# releases - widget can be (sidebar, modal or embed)
-# olvy_organization: devlopr
-# olvy_widget_type: sidebar
 
 # syntax highlighter
 markdown: kramdown
@@ -241,6 +220,7 @@ exclude:
   - assets/bower_components/masonry-layout/README.md
   - assets/bower_components/imagesloaded/README.md
   - projects.md
+  - _posts/2024-07-03-Unannounced-Project.md
 
 
 destination: ./build
