--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ urls:
       url: /projects
     - text: Gallery
       url: /gallery
+    - text: GitHub
+      url: https://github.com/ryan-harland
 
 
 # Edit Author details (For multi authors check _data/authors.yml)
@@ -51,7 +53,7 @@ author_education_details:
               - college_logo: shu.png
                 college_name: Sheffield Hallam University
                 college_url: https://www.shu.ac.uk/
-                college_degree: BSc Computer Science for Games - First Class w/ Honours, Award Classification - 84.6
+                college_degree: BSc Computer Science for Games - First Class w/ Honours
                 description: During this course I undertook many projects, such as creating games using SFML, DirectX 11, as well as creating a custom engine for the PlayStation 5, of which our game won "Best Level 6 Group Project" at GameOver 25
                 visibility: true
               - college_logo: cc.png
@@ -60,21 +62,6 @@ author_education_details:
                 college_degree: Level 3 Extended Diploma in Game Design - D*D*D
                 description: During my studies here I undertook many aspects of industry, such as business, 3D modelling, 2D art, Unreal Engine and C++, culminating in creating a tutorial level for a survival RPG
                 visibility: true
-
-# Projects
-author_project_details:
-              - project_thumbnail: gamershub.png
-                project_title: Gamers Hub
-                project_description: A Platform built for Gamers and Game Devs
-                project_url: https://gamershub.in
-                visibility: true
-                featured: false
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
-                visibility: true
-                featured: true
 
 # social links
 # twitter_username: xplor4r
@@ -119,25 +106,12 @@ paginate_path: "/projects/page/:num/"
 #   permalinks:
 #     category: '/category/:name/'
 
-collections:
-  products:
-    output: true
-  authors:
-    output: true
-
 defaults:
   -
     scope:
       path: "gallery"
     values:
       permalink: /:path/:basename:output_ext
-  -
-    scope:
-      path: ""
-      type: authors
-    values:
-      layout: author
-      permalink: /blog/authors/:slug
   -
     scope:
       path: 'assets/**'
