--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ryan Harland
 subtitle: Problem-solving and making games are my jam!
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
+  Welcome to my personal website and portfolio!
 
 url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
