--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author_email: "rharland726@gmail.com"
 author_location: England
 author_website_url: "ryan-harland.github.io"
 typewrite-text: I'm an aspiring indie game developer and programmer with a love for many disciplines!
-hero_cover_img: background.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
+hero_cover_img: background.webp # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Latest project information
 
